--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ time, mark, audio, video {
 	margin: 0;
 	padding: 0;
 	border: 0;
-	font-size: 16px;
+	font-size: 14px;
 	/* font: inherit; */
 	vertical-align: baseline;
   color:#fff;
@@ -53,7 +53,10 @@ a {color:#352017; text-decoration:none;}
 .mt20 {margin-top:20px;}
 .mt30 {margin-top:30px;}
 
+.txt-lg {font-size:20px !important;}
 .txt-md {font-size:16px !important;}
+.txt-sm {font-size:14px !important;}
+
 .color-gr {color:#3a5764 !important;}
 .color-lgr {color:#ddd !important;}
 
@@ -65,7 +68,7 @@ body, html {background-color:#3FADBC; font-family: 'Noto Serif KR', sans-serif;
   align-items: center; flex-direction:column; z-index:999;}
 
 .ly-contents > strong,
-.ly-contents > strong > span {margin-bottom:20px; line-height:30px; font-size: 20px;}
+.ly-contents > strong > span {margin-bottom:20px; line-height:30px;}
 
 .ly-contents.type-fixed {position:absolute; z-index:999; top:0; bottom:0; left:0; right:0; background-color:#3FADBC;
 animation:fade-out-bg 4s ease-in forwards; opacity:1;}
@@ -95,14 +98,14 @@ animation:fade-out-bg 4s ease-in forwards; opacity:1;}
 
 .txt-greet {margin-top:10px; max-width:80%;}
 .txt-greet b {display:block; text-align:left;}
-.txt-greet em {display:block; font-size:14px; line-height:30px; margin-top:10px; text-align:left;}
+.txt-greet em {display:block; line-height:30px; margin-top:10px; text-align:left;}
 .txt-greet i {display:block; line-height:22px; color:#e2e2e2;}
 
 .ly-contents {display:flex; width:100%; padding: 220px 0; height:auto; overflow-y: scroll; flex-direction:column; text-align:center; justify-content: center;}
-
-.ly-contents.type-userinfo {height:calc(100vh - 70px)}
+.ly-contents.type-last {padding:220px 0 280px 0;}
+.ly-contents.type-userinfo {padding:0; height:calc(100vh - 70px)}
 .ly-contents.type-userinfo p,
-.ly-contents.type-userinfo span {margin:10px 0; font-size:22px; line-height:26px;}
+.ly-contents.type-userinfo span {margin:10px 0; line-height:26px;}
 .btn-userinfo {position:relative; display:block; width:100px; height:40px; margin:30px auto;
 line-height:40px; color:#fff; background: rgba(255,255,255,0.2); border-radius:10px; cursor: pointer;}
 
@@ -111,13 +114,14 @@ line-height:40px; color:#fff; background: rgba(255,255,255,0.2); border-radius:1
 color: rgba(0,0,0,0);}
 .wrap-input input:focus-visible {outline:none; border:1px solid #ccc;}
 .wrap-input b {position:absolute; top:0; right:20px; width:100px; height:36px;line-height: 25px;
-  font-size: 22px; z-index:1; white-space: nowrap; text-overflow: ellipsis; overflow:hidden; }
+ z-index:1; white-space: nowrap; text-overflow: ellipsis; overflow:hidden; }
 
 .ly-contents.type-main {position:relative; opacity:0; animation: fade-in 3s forwards linear;}
-.ly-contents.type-main p {padding:3px 0; letter-spacing:1.1px; font-size:16px;}
-.ly-contents.type-main b {padding:10px 0; font-weight:bold; font-size:26px; color:#dcdcdc;}
-.ly-contents.type-main b i {display:block; padding:8px 0; font-size:22px; color:#fff;}
-.ly-contents.type-main span {margin-top:10px; font-size:16px;}
+.ly-contents.type-main span {padding:10px 0; font-weight:bold;}
+.ly-contents.type-main span i {display:block; padding:8px 0;}
+.ly-contents.type-main p {padding:3px 0; letter-spacing:1.1px;}
+
+.ly-contents.type-main span {margin-top:10px;}
 
 .ly-contents.type-gallery  {}
 
@@ -127,22 +131,18 @@ color: rgba(0,0,0,0);}
 
 .list-maps {margin:10px auto; max-width:78%; text-align:left;}
 .list-maps li {padding:3px 0;}
-.list-maps li b {display:block; color:#555; margin-bottom:12px; font-size:16px; text-decoration:underline;}
-.list-maps li span {display:block; margin:10px 0; font-size:14px !important;}
+.list-maps li b {display:block; color:#555; margin-bottom:12px; text-decoration:underline;}
+.list-maps li span {display:block; margin:10px 0;}
 
-.ly-contents.type-mind {}
 .list-mind {width:70%; margin:0 auto;}
 .list-mind li > p {margin-bottom:20px; text-align:left;}
 .list-mind ul li {padding:4px 0;}
-.list-mind ul li p {color:#e2e2e2; margin-bottom:10px; font-size:14px;}
+.list-mind ul li p {margin-bottom:10px;}
 .wrap-accountnum textarea {opacity:0; width:0; height:0;}
 .txt-accountinfo {display:flex; justify-content: space-between;}
-.txt-accountinfo b {font-size:14px;}
-.wrap-accountnum button {border-radius:3px; border:1px solid #ccc; color:#e2e2e2; background:#3FADBC;}
+.wrap-accountnum button {border-radius:3px; border:1px solid #ccc; background:#3FADBC; color:#ccc;}
 
-.ly-contents.type-location p,
-.ly-contents.type-location span {font-size:20px;}
-.ly-contents.type-location > p {margin:5px 0; font-size:18px; color:#e2e2e2;}
+.ly-contents.type-location > p {margin:5px 0;}
 
 .wrap-btn {display:flex; margin:20px 0;}
 .wrap-btn .btn-map {display:inline-block; width:50%; height:46px; line-height:46px; color:#fff; background:rgba(255,255,255,0.3)}
