--- a/css/style.css
+++ b/css/style.css
@@ -144,14 +144,6 @@ color: rgba(0,0,0,0);}
 .wrap-btn .btn-map.naver {background: rgba(255,255,255,0.18);}
 .wrap-btn .btn-map:hover {transition:color 0.2s; color:#16646F;}
 
-.arrow-g {display:flex; justify-content: flex-end; margin-top:5px;}
-.arrow-area {width:40px; height:20px; cursor:pointer;}
-.arr-icon { display: inline-block; width:8px; height:18px;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  overflow: hidden; background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='6' height='11' viewBox='0 0 6 11' fill='none'%3E%3Cpath d='M0.999999 10L5 5.5L1 1' stroke='white' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E"); }
-.arr-icon.prev {transform: rotate(180deg);}
 
 .list-fm {}
 .list-fm li {padding:10px;}
@@ -162,11 +154,24 @@ color: rgba(0,0,0,0);}
 
 /* photo silder */
 .wrap-gallery {width:90%; margin:0 auto;}
-.slick-list {height:430px; background: rgba(255,255,255,0.3);}
-.list-photo .slick-arrow {position:absolute; width:40px; height:20px; bottom:-20px; opacity:0;}
+.slick-list {max-height:430px;}
+.list-photo .slick-arrow {position:absolute; width:40px; height:20px; bottom:0; opacity:0;}
 .list-photo .slick-prev {right:40px;}
 .list-photo .slick-next {right:0;}
 .data-photo img {width:100%; height:auto;}
+.slick-dots {margin-top:10px;}
+.slick-dots li {display:inline-block; margin:0 2px;}
+.slick-dots li button {display:inline-block; width:10px; height:4px; background-color:#bbbbbb; border:none; text-indent:-9999px;}
+.slick-dots li.slick-active button {background-color:#fff;}
+
+.arrow-g {position:relative; display:flex; justify-content: flex-end; margin-top:-18px; z-index:99;}
+.arrow-area {width:40px; height:20px; cursor:pointer;}
+.arr-icon { display: inline-block; width:8px; height:18px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  overflow: hidden; background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='6' height='11' viewBox='0 0 6 11' fill='none'%3E%3Cpath d='M0.999999 10L5 5.5L1 1' stroke='white' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E"); }
+.arr-icon.prev {transform: rotate(180deg);}
 
 /* 스크롤바 설정*/
 
