--- a/css/style.css
+++ b/css/style.css
@@ -155,7 +155,7 @@ color: rgba(0,0,0,0);}
 /* photo silder */
 .wrap-gallery {width:90%; margin:0 auto;}
 .slick-list {max-height:430px;}
-.list-photo .slick-arrow {position:absolute; width:40px; height:20px; bottom:0; opacity:0;}
+.list-photo .slick-arrow {position:absolute; width:40px; height:20px; bottom:0; opacity:0; cursor: pointer;}
 .list-photo .slick-prev {right:40px;}
 .list-photo .slick-next {right:0;}
 .data-photo img {width:100%; height:auto;}
@@ -164,7 +164,7 @@ color: rgba(0,0,0,0);}
 .slick-dots li button {display:inline-block; width:10px; height:4px; background-color:#bbbbbb; border:none; text-indent:-9999px;}
 .slick-dots li.slick-active button {background-color:#fff;}
 
-.arrow-g {position:relative; display:flex; justify-content: flex-end; margin-top:-18px; z-index:99;}
+.arrow-g {display:flex; justify-content: flex-end; margin-top:-18px;}
 .arrow-area {width:40px; height:20px; cursor:pointer;}
 .arr-icon { display: inline-block; width:8px; height:18px;
   background-size: cover;
